# keplerslaws

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  TODO  config.cache  config.h  config.status  configure  configure.in  kepler.kdevprj  mkinstalldirs
kepler/: CropTitel.rgb  CropWeiter_DE.rgb  CropWeiter_EN.rgb  Makefile  Makefile.am  Makefile.in  Text0_DE.rgb  Text0_EN.rgb  Text1_DE.rgb  Text1_EN.rgb  Text2_DE.rgb  Text2_EN.rgb  Text3_DE.rgb  Text3_EN.rgb  Text4_DE.rgb  Text4_EN.rgb  Text5_DE.rgb  Text5_EN.rgb  Untertitel1_0_DE.rgb  Untertitel1_0_EN.rgb  Untertitel1_1_DE.rgb  Untertitel1_1_EN.rgb  Untertitel1_2_DE.rgb  Untertitel1_2_EN.rgb  Untertitel2_0_DE.rgb  Untertitel2_0_EN.rgb  Untertitel3_0_DE.rgb  Untertitel3_0_EN.rgb  Untertitel3_1_DE.rgb  Untertitel3_1_EN.rgb  Untertitel3_2_DE.rgb  Untertitel3_2_EN.rgb  Untertitel4_0_DE.rgb  Untertitel4_0_EN.rgb  Untertitel5_0_DE.rgb  Untertitel5_0_EN.rgb  (+50 more)
kepler/texte/: CropTitel.tex  CropWeiter_DE.tex  CropWeiter_EN.tex  Makefile  Makefile.am  Makefile.in  Text0_DE.tex  Text0_EN.tex  Text1_DE.eps  Text1_DE.fig  Text1_DE.tex  Text1_EN.eps  Text1_EN.fig  Text1_EN.tex  Text2_DE.eps  Text2_DE.fig  Text2_DE.tex  Text2_EN.eps  Text2_EN.tex  Text3_DE.tex  Text3_EN.tex  Text4_DE.tex  Text4_EN.tex  Text5_DE.eps  Text5_DE.fig  Text5_DE.tex  Text5_EN.eps  Text5_EN.fig  Text5_EN.tex  Untertitel1_0_DE.tex  Untertitel1_0_EN.tex  Untertitel1_1_DE.tex  Untertitel1_1_EN.tex  Untertitel1_2_DE.tex  Untertitel1_2_EN.tex  Untertitel2_0_DE.tex  Untertitel2_0_EN.tex  Untertitel3_0_DE.tex  Untertitel3_0_EN.tex  Untertitel3_1_DE.tex  (+13 more)
(+19 files in other folders)
