####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = CropTitel.tex CropWeiter_DE.tex CropWeiter_EN.tex Text0_DE.tex Text0_EN.tex Text1_DE.eps Text1_DE.fig Text1_DE.tex Text1_EN.eps Text1_EN.fig Text1_EN.tex Text2_DE.eps Text2_DE.fig Text2_DE.tex Text2_EN.eps Text2_EN.fig Text2_EN.tex Text3_DE.tex Text3_EN.tex Text4_DE.tex Text4_EN.tex Text5_DE.eps Text5_DE.fig Text5_DE.tex Text5_EN.eps Text5_EN.fig Text5_EN.tex Untertitel1_0_DE.tex Untertitel1_0_EN.tex Untertitel1_1_DE.tex Untertitel1_1_EN.tex Untertitel1_2_DE.tex Untertitel1_2_EN.tex Untertitel2_0_DE.tex Untertitel2_0_EN.tex Untertitel3_0_DE.tex Untertitel3_0_EN.tex Untertitel3_1_DE.tex Untertitel3_1_EN.tex Untertitel3_2_DE.tex Untertitel3_2_EN.tex Untertitel4_0_DE.tex Untertitel4_0_EN.tex Untertitel5_0_DE.tex Untertitel5_0_EN.tex Untertitel5_1_DE.tex Untertitel5_1_EN.tex flag_DE.eps flag_DE.fig flag_EN.eps flag_EN.fig 

####### kdevelop will overwrite this part!!! (end)############
